SQOOP-999: Support bulk load from HDFS to PostgreSQL using COPY ... FROM
(Masatake Iwasaki via Jarek Jarcec Cecho)

--- a/ivy.xml
+++ b/ivy.xml
@@ -182,6 +182,9 @@ under the License.
       <artifact name="hcatalog-core" type="jar"/>
     </dependency>
 
+    <dependency org="org.postgresql" name="postgresql"
+      rev="${postgresql.version}" conf="common->default" />
+
     <exclude org="org.apache.hadoop" module="avro"/>
     <exclude org="commons-daemon" module="commons-daemon" />
     <exclude type="pom" />
