--- a/execution/mapreduce/pom.xml
+++ b/execution/mapreduce/pom.xml
@@ -47,6 +47,12 @@ limitations under the License.
       <scope>test</scope>
     </dependency>
 
+     <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- See profiles for Hadoop specific dependencies -->
 
   </dependencies>
