SQOOP-1049: Sqoop2: Record not imported if partition column value is NULL
(Mengwei Ding via Jarek Jarcec Cecho)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-resources.properties
@@ -81,6 +81,10 @@ table.dataDirectory.help = The sub-directory under warehouse for data
 table.partitionColumn.label = Partition column name
 table.partitionColumn.help = A specific column for data partition
 
+# Table pcol is null
+table.partitionColumnNull.label = Nulls in partition column
+table.partitionColumnNull.help = Whether there are null values in partition column
+
 # Table boundary
 table.boundaryQuery.label = Boundary query
 table.boundaryQuery.help = The boundary query for data partition
