SQOOP-1109: Sqoop2: Add new committers to root pom.xml file (Jarek Jarcec Cecho via Kate Ting)

--- a/pom.xml
+++ b/pom.xml
@@ -583,6 +583,14 @@ limitations under the License.
       </roles>
     </developer>
     <developer>
+      <id>hshreedharan</id>
+      <name>Hari Shreedharan</name>
+      <organization>Cloudera</organization>
+      <roles>
+        <role>Committer</role>
+      </roles>
+    </developer>
+    <developer>
       <id>jarcec</id>
       <name>Jaroslav Cecho</name>
       <organization>Cloudera</organization>
@@ -627,7 +635,7 @@ limitations under the License.
         <role>PMC Member</role>
       </roles>
     </developer>
-     <developer>
+    <developer>
       <id>posix4e</id>
       <name>Alex Newman</name>
       <organization>Opower</organization>
@@ -651,6 +659,14 @@ limitations under the License.
       <roles>
         <role>Committer</role>
         <role>PMC Member</role>
+      </roles>
+    </developer>
+    <developer>
+      <id>venkatnrangan</id>
+      <name>Venkat Ranganathan</name>
+      <organization>Hortonworks</organization>
+      <roles>
+        <role>Committer</role>
       </roles>
     </developer>
   </developers>
