--- a/connector/connector-sdk/pom.xml
+++ b/connector/connector-sdk/pom.xml
@@ -15,30 +15,29 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+  http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>sqoop</artifactId>
+    <groupId>org.apache.sqoop</groupId>
+    <artifactId>connector</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.sqoop</groupId>
-  <artifactId>connector</artifactId>
-  <name>Sqoop Connectors</name>
-  <packaging>pom</packaging>
+  <artifactId>connector-sdk</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
+  <name>Sqoop Connector SDK</name>
 
-  <modules>
-    <module>connector-sdk</module>
-    <module>connector-generic-jdbc</module>
-    <!-- Uncomment and finish connectors after sqoop framework will become stable
-    <module>connector-mysql-jdbc</module>
-    <module>connector-mysql-fastpath</module>
-    -->
-  </modules>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 </project>
