--- a/ivy.xml
+++ b/ivy.xml
@@ -49,12 +49,15 @@ under the License.
       extends="common,runtime,hbase${hbaseprofile},hcatalog" />
     <conf name="hadoop200" visibility="private"
       extends="common,runtime,hbase${hbaseprofile},hcatalog" />
+    <conf name="hadoop210" visibility="private"
+      extends="common,runtime,hbase${hbaseprofile},hcatalog" />
 
     <conf name="test" visibility="private" extends="common,runtime"/>
     <conf name="hadoop23test" visibility="private" extends="test,hadoop23" />
     <conf name="hadoop20test" visibility="private" extends="test,hadoop20" />
     <conf name="hadoop100test" visibility="private" extends="test,hadoop100" />
     <conf name="hadoop200test" visibility="private" extends="test,hadoop200" />
+    <conf name="hadoop210test" visibility="private" extends="test,hadoop210" />
 
     <!-- We don't redistribute everything we depend on (e.g., Hadoop itself);
          anything which Hadoop itself also depends on, we do not ship.
@@ -78,6 +81,21 @@ under the License.
     <artifact conf="master"/>
   </publications>
   <dependencies>
+    <!-- Dependencies for Hadoop 2.1.0 -->
+    <dependency org="org.apache.hadoop" name="hadoop-common"
+      rev="${hadoop.version}" conf="hadoop210->default">
+      <artifact name="hadoop-common" type="jar" />
+      <artifact name="hadoop-common" type="jar" m:classifier="tests"/>
+    </dependency>
+    <dependency org="org.apache.hadoop" name="hadoop-hdfs"
+      rev="${hadoop.version}" conf="hadoop210->default">
+      <artifact name="hadoop-hdfs" type="jar" />
+      <artifact name="hadoop-hdfs" type="jar" m:classifier="tests"/>
+    </dependency>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-common"
+      rev="${hadoop.version}" conf="hadoop210->default"/>
+    <dependency org="org.apache.hadoop" name="hadoop-mapreduce-client-core"
+      rev="${hadoop.version}" conf="hadoop210->default"/>
 
     <!-- Dependencies for Hadoop 2.0.0 -->
     <dependency org="org.apache.hadoop" name="hadoop-common"
