--- a/connector/connector-sdk/pom.xml
+++ b/connector/connector-sdk/pom.xml
@@ -24,12 +24,12 @@ limitations under the License.
   <parent>
     <groupId>org.apache.sqoop</groupId>
     <artifactId>connector</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.99.3</version>
   </parent>
 
   <groupId>org.apache.sqoop</groupId>
   <artifactId>connector-sdk</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>1.99.3</version>
   <name>Sqoop Connector SDK</name>
 
   <dependencies>
