SQOOP-1196: Sqoop2: Add support for arbitrary compression codecs
(Raghav Kumar Gautam via Jarek Jarcec Cecho)

--- a/core/src/main/resources/framework-resources.properties
+++ b/core/src/main/resources/framework-resources.properties
@@ -41,6 +41,9 @@ output.outputFormat.help = Format in which data should be serialized
 output.compression.label = Compression format
 output.compression.help = Compression that should be used for the data
 
+output.customCompression.label = Custom compression format
+output.customCompression.help = Full class name of the custom compression
+
 output.outputDirectory.label = Output directory
 output.outputDirectory.help = Output directory for final data
 
