SQOOP-1247. Sqoop2: Add sqoop-tomcat dependency to distribution module.
(Jarek Jarcec Cecho via Hari Shreedharan)

--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,11 @@ limitations under the License.
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.sqoop</groupId>
+        <artifactId>sqoop-tomcat</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>com.googlecode.json-simple</groupId>
         <artifactId>json-simple</artifactId>
         <version>${json-simple.version}</version>
