SQOOP-1268: Sqoop tarballs do not contain .gitignore and .gitattribute files   (Jarec Jarcec Cecho via Venkat Ranganathan)

--- a/build.xml
+++ b/build.xml
@@ -599,7 +599,7 @@
     <!-- copy in various components of the initial source layout
          so that the redistributable can bootstrap itself. -->
     <copy todir="${dist.dir}" includeEmptyDirs="false" flatten="false">
-      <fileset dir="${basedir}">
+      <fileset dir="${basedir}" defaultexcludes="no">
         <include name="**/*" />
         <exclude name="build/**" />
         <exclude name="lib/**" />
@@ -696,7 +696,7 @@
     <!-- copy in various components of the initial source layout
          so that the redistributable can bootstrap itself. -->
     <copy todir="${src.dist.dir}" includeEmptyDirs="false" flatten="false">
-      <fileset dir="${basedir}">
+      <fileset dir="${basedir}" defaultexcludes="no">
         <include name="**/*" />
         <exclude name="build/**" />
         <exclude name=".git/**" />
