--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -55,26 +55,7 @@ limitations under the License.
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-site-plugin</artifactId>
-            <version>3.0-beta-3</version>
-            <configuration>
-              <reportPlugins>
-                <plugin>
-                  <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-project-info-reports-plugin</artifactId>
-                  <version>2.2</version>
-                  <reportSets>
-                    <reportSet>
-                      <reports></reports>
-                    </reportSet>
-                  </reportSets>
-                </plugin>
-                <plugin>
-                  <groupId>org.tomdz.maven</groupId>
-                  <artifactId>sphinx-maven-plugin</artifactId>
-                  <version>1.0.2</version>
-                </plugin>
-              </reportPlugins>
-            </configuration>
+            <version>3.3</version>
 
             <!-- Configure generating documentation alongside with package -->
             <executions>
@@ -90,6 +71,26 @@ limitations under the License.
           </plugin>
         </plugins>
       </build>
+      <reporting>
+        <plugins>
+          <plugin>
+            <groupId>org.tomdz.maven</groupId>
+            <artifactId>sphinx-maven-plugin</artifactId>
+            <version>1.0.2</version>
+          </plugin>
+          <!-- Turning off standard reports as they collide with sphinx -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-project-info-reports-plugin</artifactId>
+            <version>2.4</version>
+            <reportSets>
+              <reportSet>
+                <reports></reports>
+              </reportSet>
+            </reportSets>
+          </plugin>
+        </plugins>
+      </reporting>
     </profile>
   </profiles>
 
